@@ -22,6 +22,7 @@ import hudson.model.User;
 import hudson.security.ACL;
 import hudson.security.ACLContext;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Collection;
 import java.util.List;
@@ -79,7 +80,7 @@ public class ApiTokenPropertyTest {
         assertEquals(u, wc.executeOnServer(User::current));
 
         // Make sure the UI shows the token to the user
-        HtmlPage config = wc.goTo(u.getUrl() + "/configure");
+        HtmlPage config = wc.goTo(u.getUrl() + "/security/");
         HtmlForm form = config.getFormByName("config");
         assertEquals(token, form.getInputByName("_.apiToken").getValue());
 
@@ -125,7 +126,7 @@ public class ApiTokenPropertyTest {
 
         // Make sure the UI does not show the token to another user
         WebClient wc = createClientForUser("bar");
-        HtmlPage config = wc.goTo(u.getUrl() + "/configure");
+        HtmlPage config = wc.goTo(u.getUrl() + "/security/");
         HtmlForm form = config.getFormByName("config");
         assertEquals(Messages.ApiTokenProperty_ChangeToken_TokenIsHidden(), form.getInputByName("_.apiToken").getValue());
     }
@@ -151,7 +152,7 @@ public class ApiTokenPropertyTest {
                 requirePOST.getWebResponse().getStatusCode());
 
         wc.setThrowExceptionOnFailingStatusCode(true);
-        WebRequest request = new WebRequest(new URL(j.getURL().toString() + foo.getUrl() + "/" + descriptor.getDescriptorUrl() + "/changeToken"), HttpMethod.POST);
+        WebRequest request = new WebRequest(new URI(j.getURL().toString() + foo.getUrl() + "/" + descriptor.getDescriptorUrl() + "/changeToken").toURL(), HttpMethod.POST);
         HtmlPage res = wc.getPage(request);
 
         // TODO This nicer alternative requires https://github.com/jenkinsci/jenkins/pull/2268 or similar to work
